--- a/src/views/feedbacks.html
+++ b/src/views/feedbacks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/feedbacks.css">
+    <link rel="stylesheet" href="styles/burger_menu.css">
     <title>Document</title>
 </head>
 
@@ -16,12 +17,32 @@
                 <span class="header__logo-text">Course Makery</span>
             </a>
             <div class="header__menu">
-                <a class="header__menu-link" href="#">About us</a>
-                <a class="header__menu-link" href="#">Docs</a>
-                <a class="header__menu-link" href="#">Go buy a course</a>
-                <a class="header__menu-link" href="#">Funny pics</a>
+                <a class="header__menu-link" href="aboutus">About us</a>
+                <!-- <a class="header__menu-link" href="docs">Docs</a> -->
+                <a class="header__menu-link" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Go buy a course</a>
+                <a class="header__menu-link" href="funnypics">Funny pics</a>
                 <a class="header__menu-link" href="feedbacks">Feedback</a>
-                <a class="header__menu-link header__menu-link--icon" href="https://github.com/m1ss1onBest/my-web"> <img class="header__menu-icon" src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo">
+                <a class="header__menu-link header__menu-link--icon" href="https://github.com/m1ss1onBest/my-web">
+                    <img class="header__menu-icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo">
+                </a>
+            </div>
+
+            <!-- burger menu -->
+            <button class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="header__menu-mobile">
+                <a class="header__menu-link header__menu-link--icon" href="aboutus">About us</a>
+                <!-- <a class="header__menu-link header__menu-link--icon" href="docs">Docs</a> -->
+                <a class="header__menu-link header__menu-link--icon" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Go buy a course</a>
+                <a class="header__menu-link header__menu-link--icon" href="funnypics">Funny pics</a>
+                <a class="header__menu-link header__menu-link--icon" href="feedbacks">Feedback</a>
+                <a class="header__menu-link header__menu-link--icon" href="https://github.com/m1ss1onBest/my-web">
+                    <img class="header__menu-icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo">
                 </a>
             </div>
         </nav>
@@ -29,6 +50,7 @@
         <div class="header__content">
             <h1 class="header__title">Leave us a feedback!</h1>
         </div>
+
     </header>
 
     <section class="feedback-form">
@@ -69,6 +91,6 @@
     </footer>
 
     <script src="new_comment.js"></script>
+    <script src="burger_menu.js"></script>
 </body>
-
 </html>
